--- a/POD/package.json
+++ b/POD/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.67.3"
+    "react-native": "0.67.3",
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/runtime": "^7.17.2",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@types/react-native": "^0.67.1",
     "babel-jest": "^27.5.1",
     "eslint": "^8.10.0",
     "jest": "^27.5.1",
