--- a/wonjin/POD/package.json
+++ b/wonjin/POD/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^7.2.6",
     "redux-flipper": "^2.0.1",
     "rn-async-storage-flipper": "^0.0.10",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
